[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/PixelCanvas.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/bg.png" type="Texture" id=2]
[ext_resource path="res://scripts/Focus.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/select.png" type="Texture" id=4]
[ext_resource path="res://resource/my_theme.tres" type="Theme" id=5]
[ext_resource path="res://scenes/ColorPalette/ColorPalette.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/shader/glow.shader" type="Shader" id=7]
[ext_resource path="res://scripts/Main.gd" type="Script" id=8]
[ext_resource path="res://assets/ui/cursor.png" type="Texture" id=9]
[ext_resource path="res://scenes/ui/MenuBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ui/ToolPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/ui/SaveFilePopup.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/ui/CanvasFrame.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/ui/CanvasInfo.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/ui/CanvasClipPopup.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/ui/SaveFileSettingsPopup.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/Logger/LoggerDisplay.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/font/PixelOperator.ttf" type="DynamicFontData" id=18]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 18 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 7 )
shader_param/radius = 3.877
shader_param/amount = 0.155

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 7 )
shader_param/radius = 0.0
shader_param/amount = 0.0

[sub_resource type="Animation" id=4]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cursor:material:shader_param/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.1 ),
"transitions": PoolRealArray( 0.4, 1.8, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cursor:material:shader_param/amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.1 ),
"transitions": PoolRealArray( 0.4, 1.8, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.4, 0.0, 0.0 ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 8 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -52.0
mouse_filter = 2
theme = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/VBoxContainer2"]
margin_right = 1024.0
margin_bottom = 52.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line1" type="Label" parent="GUI/VBoxContainer2/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2" type="Label" parent="GUI/VBoxContainer2/VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
anchor_bottom = 1.0
margin_top = 29.0
margin_right = 84.0
margin_bottom = -43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolPanel" parent="GUI/VBoxContainer" instance=ExtResource( 11 )]
margin_right = 84.0
rect_min_size = Vector2( 76, 188 )

[node name="ColorPalette" parent="GUI/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 192.0
margin_right = 84.0
margin_bottom = 528.0

[node name="SaveFilePopup" parent="GUI" instance=ExtResource( 12 )]

[node name="MenuBar" parent="GUI" instance=ExtResource( 10 )]
anchor_bottom = 0.048
margin_bottom = -28.8

[node name="CanvasInfo" parent="GUI" instance=ExtResource( 14 )]

[node name="CanvasClipPopup" parent="GUI" instance=ExtResource( 15 )]
visible = false

[node name="SaveFileSettingsPopup" parent="GUI" instance=ExtResource( 16 )]
visible = false
margin_right = 292.0

[node name="LoggerDisplay" parent="GUI" instance=ExtResource( 17 )]
margin_left = -225.0
margin_top = 29.0
margin_bottom = 291.0

[node name="Bg" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3200.0
margin_top = -3200.0
margin_right = -1600.0
margin_bottom = -1600.0
rect_scale = Vector2( 4, 4 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PixelCanvas" parent="." instance=ExtResource( 1 )]

[node name="CanvasFrame" parent="." instance=ExtResource( 13 )]
mouse_filter = 2

[node name="Focus" type="Position2D" parent="."]
visible = false
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Focus"]
current = true
limit_left = -1600
limit_top = -1600
limit_right = 1600
limit_bottom = 1600
smoothing_enabled = true
smoothing_speed = 16.0

[node name="indicator" type="Sprite" parent="Focus"]
material = SubResource( 2 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Focus"]

[node name="Cursor" type="Sprite" parent="."]
modulate = Color( 0.2, 0.796078, 0.839216, 1 )
material = SubResource( 3 )
scale = Vector2( 0.062, 0.062 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( -192, -192 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "cursor_flashing"
playback_speed = 0.5
anims/cursor_flashing = SubResource( 4 )
[connection signal="redo_btn_pressed" from="GUI/VBoxContainer/ToolPanel" to="." method="_on_ToolPanel_redo_btn_pressed"]
[connection signal="selection_update" from="GUI/VBoxContainer/ToolPanel" to="." method="_on_ToolPanel_selection_update"]
[connection signal="undo_btn_pressed" from="GUI/VBoxContainer/ToolPanel" to="." method="_on_ToolPanel_undo_btn_pressed"]
[connection signal="color_selected" from="GUI/VBoxContainer/ColorPalette" to="." method="_on_ColorPalette_color_selected"]
[connection signal="canvas_info" from="GUI/MenuBar" to="." method="_on_MenuBar_canvas_info"]
[connection signal="clear_canvas" from="GUI/MenuBar" to="." method="_on_MenuBar_clear_canvas"]
[connection signal="grid_settings_form_submit" from="GUI/MenuBar" to="." method="_on_MenuBar_grid_settings_form_submit"]
[connection signal="new_file_form_submit" from="GUI/MenuBar" to="." method="_on_MenuBar_new_file_form_submit"]
[connection signal="redo" from="GUI/MenuBar" to="." method="_on_MenuBar_redo"]
[connection signal="save_file" from="GUI/MenuBar" to="." method="_on_MenuBar_save_file"]
[connection signal="set_canvas_bg_color" from="GUI/MenuBar" to="." method="_on_MenuBar_set_canvas_bg_color"]
[connection signal="set_canvas_clip" from="GUI/MenuBar" to="." method="_on_MenuBar_set_canvas_clip"]
[connection signal="undo" from="GUI/MenuBar" to="." method="_on_MenuBar_undo"]
[connection signal="form_submited" from="GUI/CanvasClipPopup" to="." method="_on_CanvasClipPopup_form_submited"]
[connection signal="save_file_form_submited" from="GUI/SaveFileSettingsPopup" to="." method="_on_SaveFileSettingsPopup_save_file_form_submited"]
[connection signal="bitmap_init" from="PixelCanvas" to="CanvasFrame" method="_on_PixelCanvas_bitmap_init"]
[connection signal="framesize_changed" from="CanvasFrame" to="." method="_on_CanvasFrame_framesize_changed"]
[connection signal="state_changed" from="Focus" to="." method="_on_Focus_state_changed"]
